--- a/bq-project/src/app/admin/admin-product/admin-products-list/admin-products-list.component.scss
+++ b/bq-project/src/app/admin/admin-product/admin-products-list/admin-products-list.component.scss
@@ -1,37 +1,93 @@
-h5{
-    font-size: 13px;
-    font-weight: bold;
-}
-p{
-    font-size: 12px;
-}
-.btn-icons{
-    display: flex;
-    flex-direction: row;
-    row-gap: 2%;
-}
-.card{
-    border-radius: 1.5rem;
-}
-
 .btn {
     background-color: #8CC63F;
     border-radius: 50%;
     border-color: none;
     color: #fff;
-    margin-right: 2em;
+    margin: 0px 12px;
+    font-size: 25%;
+}
+
+.badge {
+    background-color: #FFC501;
+    width: 7rem;
+    align-items: center
+}
+
+.card{
+    border-radius: 1.5rem;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+h5 {
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+p {
+    font-size: 1em;
 }
 
 .form-select {
-    color: #FD090C;
-    border-color: #FD090C;
+    color: #E65F00;
+    border-color: #E65F00;
     font-weight: bold;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    width: 35%;
+    border-radius: 10px;
+    margin: 2% 1.5% 0 1.5%
 }
+
 .scroller-container::-webkit-scrollbar {
-    width: 8px;     /* Tamaño del scroll en vertical */  
-    display: none;  /* Ocultar scroll */
+    width: 8px;
+    display: none;
+}
+.scroller-container{
+    justify-content: space-evenly;
+    max-height: 25rem;
+    row-gap: 0.5em;
 }
 .card-body{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+.btn-icons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0.8em;
+}
+@media (min-width: 768px) and (max-width: 991px){
+    .scroller-container{
+        max-height: 30em;
+    }
+}
+@media (max-width: 575px){
+    select{
+        margin-top:8% !important;
+        margin-bottom:8% !important;
+    }
+    .card{
+        width: 90%;
+    }
+    .row{
+        width: 90%;
+        margin:0 1em 0 1em;
+    }
+    h6{
+        font-size:90%;
+        font-weight: bold;
+    }
+    .data_entry{
+        display:none;
+    }
+    .scroller-container{
+       max-height: 23rem;
+    }
+}
+@media (min-width: 720px)and(max-width:751px){
+    .scroller-container{
+        max-height: 33em;
+    }
 }
