--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -28,6 +28,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
+    <!-- NavBar--------------------- -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light container-nav">
         <div class="container-fluid">
@@ -57,11 +58,7 @@
           </div>
           <div class="card p-2">
             <div class="card-body m-0 p-0">
-              <span
-                class="badge bg-danger"
-                style="width: 7rem; align-items: center"
-                >{{ description }}</span
-              >
+              <span class="badge">{{ description }}</span>
               <div>
                 {{ email }}
               </div>
