--- a/bq-project/src/app/home/home-pedidos/home-pedidos.component.html
+++ b/bq-project/src/app/home/home-pedidos/home-pedidos.component.html
@@ -1,7 +1,5 @@
-<div class="row" style="justify-content: space-evenly; margin: 0">
-  <div
-    class="col-10 col-sm-11 bg-light"
-    style="border-radius: 25px; height: 480px">
+<div class="row m-2" style="justify-content: space-evenly; margin: 0">
+  <div class="home-pedidos col-sm-11 bg-light">
     <app-home-pedidos-list></app-home-pedidos-list>
   </div>
 </div>
