--- a/bq-project/src/app/admin/admin-product/admin-product.component.html
+++ b/bq-project/src/app/admin/admin-product/admin-product.component.html
@@ -1,8 +1,34 @@
-<div class="row conteiner-produc-list-form">
-  <div class="adminList col-10 col-sm-8 bg-light">
-    <app-admin-products-list></app-admin-products-list>
+<div class="container-user-component">
+  <div class="row m-2" style="justify-content: space-evenly">
+    <div class="admin-list col-sm-7 col-md-7 col-lg-8 bg-light">
+      <app-admin-products-list></app-admin-products-list>
+    </div>
+    <div class="admin-form col-sm-4 col-md-4 col-lg-3">
+      <app-admin-products-form></app-admin-products-form>
+    </div>
   </div>
-  <div class="adminform col-10 col-sm-3">
-    <app-admin-products-form></app-admin-products-form>
+  <button
+    class="btn btn-add"
+    type="button"
+    data-bs-toggle="offcanvas"
+    data-bs-target="#offcanvasRight"
+    aria-controls="offcanvasRight">
+    <i class="fa fa-plus-square-o" aria-hidden="true"></i>
+  </button>
+  <div
+    class="offcanvas offcanvas-end"
+    tabindex="-1"
+    id="offcanvasRight"
+    aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="offcanvas"
+        aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <app-admin-products-form></app-admin-products-form>
+    </div>
   </div>
 </div>
