--- a/bq-project/src/app/admin/admin-product/admin-product.component.scss
+++ b/bq-project/src/app/admin/admin-product/admin-product.component.scss
@@ -1,14 +1,42 @@
-.conteiner-produc-list-form{
-    justify-content: space-evenly;
-    margin: 0;
+.admin-form {
+    border-radius: 1.5rem;
+    padding: 0;
 }
 
-
-.adminform {
-    border-radius: 25px;
+.admin-list {
+    border-radius: 1.5rem;
+    height: 35em;
+}
+.btn-add {
+    display: none;
+  }
+@media (max-width: 991px) {
+    .admin-list{
+        height: 32rem;
+    }
 }
 
-.adminList {
-    border-radius: 25px;
-    height: 480px;
+@media (max-width: 575px) {
+    .container-user-component{
+        display:grid;
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(10, 65px);
+    }
+    .admin-form{
+        display: none;
+    }
+    .btn-add{
+        display: block;
+        grid-area: btn-danger;
+        grid-column: 6/8;
+        grid-row: 1/3;
+        margin: 12% auto auto auto;
+        padding: 10%;
+        font-size: xxx-large;
+        color: #E65F00;
+}
+.row{
+    grid-column: 1/-1;
+    grid-row: 1/9;
+}
 }
