--- a/bq-project/src/app/admin/admin-product/admin-products-form/admin-products-form.component.html
+++ b/bq-project/src/app/admin/admin-product/admin-products-form/admin-products-form.component.html
@@ -1,6 +1,6 @@
-<div class="card" style="border-radius: 25px">
-  <div class="card-body p-4">
-    <h3 class="title text-center">{{ title }}</h3>
+<div class="card">
+  <div class="card-body p-3">
+    <h3 class="title text-center pt-2">{{ title }}</h3>
     <form [formGroup]="productForm" (ngSubmit)="addProduct()">
       <div class="form-group">
         <label for="validationName " class="form-label">Name</label>
@@ -53,12 +53,11 @@
           <span>La url <strong>es obligatoria.</strong></span>
         </div>
       </div>
-      <div class="form-group">
+      <div class="form-group mt-0.2em">
         <label class="form-label"> Fecha de pedido: </label>
         <p class="form-control">{{ dataOrder | date: 'short' }}</p>
       </div>
-      <label for="validationType" class="form-label mt-4">Tipo</label>
-      <br />
+      <label for="validationType" class="form-label mt-2">Tipo</label>
       <div class="form-check">
         <input
           id="validationType"
@@ -77,11 +76,11 @@
           formControlName="type" />
         <label class="text-type" for="validationType"> Almuerzo y cena</label>
       </div>
-      <div class="form-group mt-4 text-center">
+      <div class="form-group mt-2 text-center">
         <input
           type="submit"
           [disabled]="productForm.invalid"
-          class="btnSubmit"
+          class="btnSubmit btn-warning"
           value="{{ title }}" />
       </div>
     </form>
