--- a/bq-project/src/app/admin/admin-user/admin-user.component.scss
+++ b/bq-project/src/app/admin/admin-user/admin-user.component.scss
@@ -6,8 +6,36 @@
 .col-form{
     padding: 0;
 }
+ /* navBar-------------------- */
+ .btn-add {
+  display: none;
+}
+
 @media (min-width: 768px) {
     .col-form{
         height: 30em;
     }
+}
+@media (max-width: 575px) {
+    .container-user-component{
+        display:grid;
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(10, 65px);
+    }
+    .col-form{
+        display: none;
+    }
+    .btn-add{
+        display: block;
+        grid-area: btn-danger;
+        grid-column: 6/8;
+        grid-row: 1/2;
+        font-size: xx-large;
+        padding: 5% 0 0 0;
+        color: #E65F00;
+    }
+.row{
+    grid-column: 1/-1;
+    grid-row: 1/9;
+}
 }
