--- a/bq-project/src/app/home/home-menu/home-menu.component.html
+++ b/bq-project/src/app/home/home-menu/home-menu.component.html
@@ -1,10 +1,10 @@
-<div class="row" style="justify-content: space-evenly; margin: 0">
-  <div
-    class="col-10 col-sm-8 bg-light"
-    style="border-radius: 25px; height: 480px">
-    <app-home-menu-list></app-home-menu-list>
-  </div>
-  <div class="col-10 col-sm-3" style="border-radius: 25px">
-    <app-home-menu-form></app-home-menu-form>
+<div class="container-user-component">
+  <div class="row m-2" style="justify-content: space-evenly; margin: 0">
+    <div class="home-list col-sm-7 col-md-7 col-lg-8 bg-light">
+      <app-home-menu-list></app-home-menu-list>
+    </div>
+    <div class="home-form col-sm-4 col-md-4 col-lg-3">
+      <app-home-menu-form></app-home-menu-form>
+    </div>
   </div>
 </div>
