--- a/bq-project/src/app/home/home-pedidos/home-pedidos-list/home-pedidos-list.component.scss
+++ b/bq-project/src/app/home/home-pedidos/home-pedidos-list/home-pedidos-list.component.scss
@@ -1,13 +1,141 @@
-.btn-icons{
-    display: flex;
-    flex-direction: row;
-    row-gap: 2%;
+.btn-group{
+    display: grid;
+    grid-template-areas:
+        "none pendiente preparado entregado";
+    gap: 8% 1%;
+    margin-top: 3%;
+}
+.btn-none{
+    grid-area: none;
+}
+.btn-pendiente{
+    grid-area: pendiente;
+}
+.btn-preparado{
+    grid-area: preparado;
+}
+.btn-entregado{
+    grid-area: entregado;
+}
+.scroller-container::-webkit-scrollbar {
+    width: 8px;
+    display: none;
+}
+.scroller-container{
+    justify-content: space-evenly;
+    max-height: 23rem;
+    row-gap: 0.5em;
+    margin-top: 1%;
+}
+.badge {
+    background-color: #FFC501;
+    width: 7rem;
+    align-items: center
 }
 .card{
     border-radius: 1.5rem;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    align-items: center;
+}
+h5 {
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+p {
+    font-size: 1em;
 }
 
-.scroller-container::-webkit-scrollbar {
-    width: 8px;     /* Tamaño del scroll en vertical */  
-    display: none;  /* Ocultar scroll */
+.form-select {
+    color: #E65F00;
+    border-color: #E65F00;
+    font-weight: bold;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    width: 35%;
+    border-radius: 10px;
+    margin: 2% 1.5% 0 1.5%
+}
+
+.card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+.btn-icons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0.8em;
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+    .scroller-container{
+        height: 23rem;
+    }
+}
+@media (max-width: 575px){
+    .btn-group{
+        display: grid;
+        grid-template-areas: "none pendiente" "preparado entregado";
+        margin: 2% 1% 0 1%;
+    }
+    .btn-none{
+        grid-area: none;
+    }
+    .btn-pendiente{
+        grid-area: pendiente;
+    }
+    .btn-preparado{
+        grid-area: preparado;
+    }
+    .btn-entregado{
+        grid-area: entregado;
+    }
+    .card{
+        width: 90%;
+    }
+    .row{
+        width: 90%;
+        margin:0 1em 0 1em;
+    }
+    h6{
+        font-size:90%;
+        font-weight: bold;
+    }
+    .data_entry{
+        display:none;
+    }
+    .scroller-container{
+        margin-top: 1.5rem;
+        height: 22rem;
+    }
+}
+@media (min-width: 707px)and(max-width:751px){
+    .scroller-container{
+        max-height: 32em;
+    }
+}
+@media (max-width: 393px){
+    .btn-group{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-areas:
+            ". none pendiente ."
+            ". preparado entregado .";
+        gap: 15% 12%;
+        margin-top: 8%;
+    }
+}
+@media (max-width: 280px){
+    .btn-group{
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-areas:
+        "none pendiente"
+        "preparado entregado";
+    margin-top: 8%;
+    gap: 0;
+    }
 }
