--- a/bq-project/src/app/login/login.component.html
+++ b/bq-project/src/app/login/login.component.html
@@ -54,7 +54,7 @@
                 <input
                   type="submit"
                   [disabled]="loginForm.invalid"
-                  class="btnSubmit"
+                  class="btnSubmit btn-warning"
                   value="Iniciar Sesión" />
               </div>
             </form>
