--- a/bq-project/src/app/home/home-pedidos/home-pedidos.component.scss
+++ b/bq-project/src/app/home/home-pedidos/home-pedidos.component.scss
@@ -14,3 +14,8 @@
         height: 29rem
     }
 }
+@media (min-width: 575px)and(max-width:768px){
+    .home-pedidos{
+        height: 28rem;
+    }
+}
