--- a/bq-project/src/app/home-chef/home-chef.component.scss
+++ b/bq-project/src/app/home-chef/home-chef.component.scss
@@ -24,20 +24,113 @@ mat-sidenav-container {
         }
       }
 }
-
-.container-card-body{
-    display: flex;
-    flex-direction: column;
-    margin-top: 5%;
-    align-items: center;
+.container-fluid{
+  display: grid;
+  grid-template-columns: 0.1fr 0.5fr 0.5fr 0.5fr 1fr 1fr 0.1fr;
 }
-.datos-admin-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.img-logo{
+  grid-column: 2/4;
+}
+.card-description{
+  grid-column: 5/7;
+  text-align: center;
+  border-radius: 1em;
+}
+.badge-description{
+  background:#FFC501;
+  width: 7rem;
+  align-items: center
+}
+/* botones */
+.btn-group{
+  display: grid;
+  grid-template-areas:
+      "none pendiente preparado entregado";
+  gap: 8% 1%;
+  margin: 2% 3.5%;
+}
+.btn-none{
+  grid-area: none;
+}
+.btn-pendiente{
+  grid-area: pendiente;
+}
+.btn-preparado{
+  grid-area: preparado;
+}
+.btn-entregado{
+  grid-area: entregado;
+}
+/* contenedor principal */
+.card-principal{
+  border-radius: 1.5rem;
+  height: 31rem;
 }
 .scroller-container::-webkit-scrollbar {
-    width: 8px;     /* Tamaño del scroll en vertical */  
+    width: 8px;     /* Tamaño del scroll en vertical */
     display: none;  /* Ocultar scroll */
+}
+.scroller-container{
+  justify-content: space-evenly;
+  max-height: 24rem;
+  row-gap: 0.5em;
+  margin-top: 1%;
+}
+.min-scroller-container{
+  justify-content: space-evenly;
+  max-height: 150px;
+}
+.product-order-container{
+  display: flex;
+  flex-direction: row;
+}
+.img-product-sales{
+  height: 2rem;
+  width: 2rem;
+}
+.card-body-sales{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card-sales{
+  border-radius: 1.5rem;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  align-items: center;
+}
+@media (max-width: 575px){
+  /* description */
+  .container-fluid{
+    display: grid;
+    grid-template-rows: 0.5fr 0.5fr;
+    padding: 0;
+  }
+  .img-logo{
+    grid-row: 1/2;
+    grid-column: 1/5;
+    margin: 0 70%;
+  }
+  .card-description{
+    grid-row: 2/3;
+    grid-column: 1/-1;
+    margin: 0;
+    text-align: center;
+    border-radius: 1em;
+  }
+}
+@media (max-width: 280px){
+  .card-principal{
+  padding: 0;
+  }
+  .btn-group{
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  grid-template-areas:
+      "none pendiente"
+      "preparado entregado";
+  margin-top: 8%;
+  gap: 0;
+  }
 }
