--- a/bq-project/src/app/home/home-menu/home-menu-list/home-menu-list.component.html
+++ b/bq-project/src/app/home/home-menu/home-menu-list/home-menu-list.component.html
@@ -29,7 +29,7 @@
 </div>
 <div class="overflow-auto row p-1 mb-md-0 mr-md-3 scroller-container">
   <div
-    class="card col-sm-5 col-md-3 m-1"
+    class="card col-sm-5 col-md-5 col-lg-3 m-1"
     *ngFor="
       let product of productNew | filterMenu: valueSearch:optionPCategory
     ">
