--- a/bq-project/src/app/home/home-pedidos/home-pedidos-list/home-pedidos-list.component.scss
+++ b/bq-project/src/app/home/home-pedidos/home-pedidos-list/home-pedidos-list.component.scss
@@ -45,16 +45,6 @@ p {
     font-size: 1em;
 }
 
-.form-select {
-    color: #E65F00;
-    border-color: #E65F00;
-    font-weight: bold;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    width: 35%;
-    border-radius: 10px;
-    margin: 2% 1.5% 0 1.5%
-}
-
 .card-body{
     display: flex;
     flex-direction: column;
@@ -69,7 +59,14 @@ p {
     justify-content: space-between;
     gap: 0.8em;
 }
-
+.min-scroller-container{
+    justify-content: space-evenly; 
+    max-height: 150px;
+}
+.product-order-container{
+    display: flex;
+    flex-direction: row;
+}
 @media (min-width: 768px) and (max-width: 991px){
     .scroller-container{
         height: 23rem;
@@ -112,11 +109,7 @@ p {
         height: 22rem;
     }
 }
-@media (min-width: 707px)and(max-width:751px){
-    .scroller-container{
-        max-height: 32em;
-    }
-}
+
 @media (max-width: 393px){
     .btn-group{
         display: grid;
