Fix CSS and implement update forms

--- a/bq-project/src/app/admin/admin-product/admin-product.component.scss
+++ b/bq-project/src/app/admin/admin-product/admin-product.component.scss
@@ -9,7 +9,10 @@
 }
 .btn-add {
     display: none;
-  }
+}
+.offcanvas-end{
+    background-color:#FFC501;
+}
 @media (max-width: 991px) {
     .admin-list{
         height: 32rem;
