--- a/bq-project/src/app/admin/admin-user/admin-user.component.scss
+++ b/bq-project/src/app/admin/admin-user/admin-user.component.scss
@@ -10,6 +10,9 @@
  .btn-add {
   display: none;
 }
+.offcanvas-end{
+    background-color:#FFC501;
+}
 
 @media (min-width: 768px) {
     .col-form{
