--- a/bq-project/src/app/home-chef/home-chef.component.html
+++ b/bq-project/src/app/home-chef/home-chef.component.html
@@ -25,7 +25,7 @@
         class="navbar navbar-expand-lg navbar-light"
         style="margin: 0; justify-content: space-around; padding: 0">
         <div class="container-fluid row m-2">
-          <img class="img-logo" src="assets/logo.png" alt="" width="120" />
+          <img class="img-logo" src="assets/logo.png" alt="" width="100em" />
           <div class="card card-description p-2">
             <div class="card-body m-0 p-0">
               <span class="badge badge-description">{{ description }}</span>
@@ -81,7 +81,6 @@
             Entregado
           </button>
         </div>
-
         <div class="overflow-auto row p-1 mb-md-0 mr-md-3 scroller-container">
           <div
             class="card card-sales col-sm-5 col-md-5 col-lg-3 m-1"
