--- a/bq-project/src/app/home/home.component.scss
+++ b/bq-project/src/app/home/home.component.scss
@@ -43,6 +43,10 @@ mat-sidenav-container {
 .btn-add{
   display:none;
 }
+.offcanvas-end{
+  width: 23rem;
+  background-color:#FFC501;
+}
 
  @media (max-width: 575px) {
   .container-fluid{
@@ -66,17 +70,12 @@ mat-sidenav-container {
   .btn-add{
     display: block;
     grid-area: btn-add;
-    font-size: -webkit-xxx-large;
-    background: #ffff;
+    background: #E65F00;
+    color: #fff;
     padding: 2%;
-    border-radius: 50%;
-    width: 50%;
+    width: 100%;
     margin: 4% auto 4% auto;
   }
-  i{
-    height:100%;
-    color: #E65F00;
-   }
    .badge{
     width: 90%;
 }
